-
Bug
-
Resolution: Done
-
P4: Low
-
None
-
5.2.0 Beta1
-
None
-
b4bb70973328d251ecf33ec58722bdb5d32366ed
When using a QProxyStyle with QMacStyle as the base style, the title bar height of QMdiSubWindow is incorrect. There's an existing hack to adjust the incorrect height provided by QMacStyle, but the hack doesn't account for QProxy style. The attached patch fixes the issue for me.